--- a/practica 5/Terraplanismo/terraplanismo/redonda.html
+++ b/practica 5/Terraplanismo/terraplanismo/redonda.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../terraplanismo/css/cssPrincipal.css">
-    <link rel="stylesheet" href="../terraplanismo/css/cssSecundario.css">
+    <link rel="stylesheet" href="css/cssPrincipal">
+    <link rel="stylesheet" href="css/cssSecundario">
     <title>Nombre de la pagina</title>
 </head>
 <body>
