--- a/practica 5/Terraplanismo/terraplanismo/foro.html
+++ b/practica 5/Terraplanismo/terraplanismo/foro.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../terraplanismo/css/cssPrincipal.css">
-    <link rel="stylesheet" href="../terraplanismo/css/cssSecundario.css">
+    <link rel="stylesheet" href="css/cssPrincipal">
+    <link rel="stylesheet" href="css/cssSecundario">
     <title>Nombre de la pagina</title>
 </head>
 <body>
@@ -11,9 +11,9 @@
         <header>Cabecera</header>
         <nav id="menu">
             <ol>
-                <li> <a href="../terraplanismo/index.html" target="_blank">Inicio </a></li>
-                <li><a href="../terraplanismo/redonda.html" target="_blank">Redonda</a></li>
-                <li><a href="../terraplanismo/foro.html" target="_blank">Foro</a></li>
+                <li> <a href="">Inicio </a></li>
+                <li><a href="">Redonda</a></li>
+                <li><a href="">Foro</a></li>
             </ol>
         </nav>
         <main>
