--- a/practica 5/Terraplanismo/ejemplo/index.html
+++ b/practica 5/Terraplanismo/ejemplo/index.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/cssPrincipal">
     <link rel="stylesheet" href="css/cssSecundario">
     <title>Nombre de la pagina</title>
 </head>
+
 <body>
     <div class="contenedor">
-        <header>Cabecera</header>
+        <header id="cabecera">TERRAPLANISMO</header>
+
         <nav id="menu">
-            <ol>
-                <li>menu</li>
-            </ol>
+            <ul>
+                <li class="1"><a href="#">Terraplanismo</a></li>
+                <li class="2"><a href="#">¿Por qué la Tierra no es plana?</a></li>
+                <li class=""><a href="#">Foros</a></li>
+            </ul>
         </nav>
         <main>
             <div id="principal"></div>
-            <div class="secundaria" id="secundaria1" ></div>
+            <div class="secundaria" id="secundaria1"></div>
         </main>
         <footer id="piePagina">
-            
+
         </footer>
     </div>
 </body>
+
 </html>
