--- a/practica 5/Terraplanismo/terraplanismo/foro.html
+++ b/practica 5/Terraplanismo/terraplanismo/foro.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/cssPrincipal">
     <link rel="stylesheet" href="css/cssSecundario">
-    <title>Nombre de la pagina</title>
+    <title>Terraplanismo</title>
 </head>
+
 <body>
     <div class="contenedor">
-        <header>Cabecera</header>
+        <header>FORO</header>
         <nav id="menu">
-            <ol>
-                <li> <a href="">Inicio </a></li>
-                <li><a href="">Redonda</a></li>
-                <li><a href="">Foro</a></li>
-            </ol>
+            <ul>
+                <li><a href="../terraplanismo/index.html">Terraplanismo </a></li>
+                <li><a href="../terraplanismo/redonda.html">¿Por qué la Tierra no es plana?</a></li>
+                <li><a href="../terraplanismo/foro.html">Foros</a></li>
+            </ul>
         </nav>
         <main>
             <div id="principal"></div>
-            <div class="secundaria" id="secundaria1" ></div>
+            <div class="secundaria" id="secundaria1"></div>
         </main>
         <footer id="piePagina">
-            
+
         </footer>
     </div>
 </body>
+
 </html>
