--- a/practica 5/Terraplanismo/terraplanismo/index.html
+++ b/practica 5/Terraplanismo/terraplanismo/index.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="../terraplanismo/css/cssPrincipal.css">
-    <link rel="stylesheet" href="../terraplanismo/css/cssSecundario.css">
-    <title>Nombre de la pagina</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="../terraplanismo/css/cssPrincipal.css">
+  <link rel="stylesheet" href="../terraplanismo/css/cssSecundario.css">
+  <title>Terraplanismo</title>
 </head>
+
 <body>
-    <div class="contenedor">
-        <header>Cabecera</header>
-        <nav id="menu">
-            <ol>
-                <li> <a href="../terraplanismo/index.html" target="_blank">Inicio </a></li>
-                <li><a href="../terraplanismo/redonda.html" target="_blank">Redonda</a></li>
-                <li><a href="../terraplanismo/foro.html" target="_blank">Foro</a></li>
-            </ol>
-        </nav>
-        <main>
-            <div id="principal"></div>
-            <div class="secundaria" id="secundaria1" ></div>
-        </main>
-        <footer id="piePagina">
-            
-        </footer>
-    </div>
+  <div class="contenedor">
+    <header>TERRAPLANISMO</header>
+    <nav id="menu">
+      <ul>
+        <li><a href="../terraplanismo/index.html" >Terraplanismo </a></li>
+        <li><a href="../terraplanismo/redonda.html">¿Por qué la Tierra no es plana?</a></li>
+        <li><a href="../terraplanismo/foro.html">Foros</a></li>
+      </ul>
+    </nav>
+    <main>
+      <div id="principal"></div>
+      <div class="secundaria" id="secundaria1"></div>
+    </main>
+    <footer id="piePagina">
+
+    </footer>
+  </div>
 </body>
+
 </html>
