--- a/practica 5/Terraplanismo/terraplanismo/redonda.html
+++ b/practica 5/Terraplanismo/terraplanismo/redonda.html
@@ -3,21 +3,46 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/cssPrincipal">
-    <link rel="stylesheet" href="css/cssSecundario">
+    <link rel="stylesheet" href="../terraplanismo/endika_css/cssPrincipal.css">
+    <link rel="stylesheet" href="../terraplanismo/endika_css/cssSecundario.css">
     <title>Terraplanismo</title>
 </head>
 
 <body>
     <div class="contenedor">
         <header>¿POR QUÉ LA TIERRA NO ES PLANA?</header>
-        <nav id="menu">
-            <ul>
-                <li><a href="../terraplanismo/index.html">Terraplanismo </a></li>
-                <li><a href="../terraplanismo/redonda.html">¿Por qué la Tierra no es plana?</a></li>
-                <li><a href="../terraplanismo/foro.html">Foros</a></li>
-            </ul>
-        </nav>
+        <div id="menu">
+            <nav>
+                <ul class="nav">
+                    <li><a href="../terraplanismo/index.html">Inicio</a></li>
+                    <li><a href="../terraplanismo/index.html">Terraplanismo</a>
+                        <ul>
+                            <li><a href="">Submenu1</a></li>
+                            <li><a href="">Submenu2</a></li>
+                            <li><a href="">Submenu3</a></li>
+                            <li><a href="">Submenu4</a>
+                                <ul>
+                                    <li><a href="">Submenu1</a></li>
+                                    <li><a href="">Submenu2</a></li>
+                                    <li><a href="">Submenu3</a></li>
+                                    <li><a href="">Submenu4</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                    <li><a href="../terraplanismo/redonda.html">¿Por qué la Tierra no es plana?</a>
+                        <ul>
+                            <li><a href="">Submenu1</a></li>
+                            <li><a href="">Submenu2</a></li>
+                            <li><a href="">Submenu3</a></li>
+                            <li><a href="">Submenu4</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="../terraplanismo/foro.html">Foro</a></li>
+                </ul>
+            </nav>
+        </div>
+
         <main>
             <div id="principal"></div>
             <div class="secundaria" id="secundaria1"></div>
