--- a/practica 5/Terraplanismo/terraplanismo/terraplanismo.html
+++ b/practica 5/Terraplanismo/terraplanismo/terraplanismo.html
@@ -10,12 +10,12 @@
 
 <body>
   <div class="contenedor">
-    <header>LA TIERRA</header>
+    <header>TERRAPLANISMO</header>
     <div id="menu">
       <nav>
         <ul class="nav">
           <li><a href="../terraplanismo/index.html">Inicio</a></li>
-          <li><a href="../terraplanismo/terraplanismo.html">Terraplanismo</a>
+          <li><a href="../terraplanismo/index.html">Terraplanismo</a>
             <ul>
               <li><a href="">Submenu1</a></li>
               <li><a href="">Submenu2</a></li>
@@ -51,8 +51,6 @@
 
     </footer>
   </div>
-  </div>
-
 </body>
 
 </html>
