--- a/practica 5/Terraplanismo/terraplanismo/index.html
+++ b/practica 5/Terraplanismo/terraplanismo/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../terraplanismo/css/cssPrincipal.css">
     <link rel="stylesheet" href="../terraplanismo/css/cssSecundario.css">
+    <link rel="stylesheet" href="../terraplanismo/css/Cristo.css">
     <title>Nombre de la pagina</title>
 </head>
 <body>
@@ -21,7 +22,58 @@
             <div class="secundaria" id="secundaria1" ></div>
         </main>
         <footer id="piePagina">
-            
+            <div >
+                <div id="contactoPie">
+                    <form action="">
+                        <fieldset>
+                        <legend>Contacta con nosotros</legend>
+                            <label for="nombre">Nombre</label>
+                            <input type="text" id="nombre" name="Nombre" placeholder="Tu Nombre.."><br>
+                            <label for="apellido">Apellidos</label>
+                            <input type="text" id="apellido" name="Apellidos" placeholder="Tus Apellidos.."><br>
+                            <label for="comunidad">Comunidad</label>
+                            <select name="comunidad" id="comunidad">
+                                <option value="And">Andalucía</option>
+                                <option value="Cat">Cataluña</option>
+                                <option value="CoM">Comunidad de Madrid</option>
+                                <option value="CoV">Comunidad Valenciana</option>
+                                <option value="Gal">Galicia</option>
+                                <option value="CyL">Castilla y León</option>
+                                <option value="PVa">País Vasco</option>
+                                <option value="Can">Canarias</option>
+                                <option value="CLM">Castilla-La Mancha</option>
+                                <option value="RdM">Región de Murcia</option>
+                                <option value="Arg">Aragón</option>
+                                <option value="IBa">Islas Baleares</option>
+                                <option value="Ext">Extremadura</option>
+                                <option value="PdA">Principado de Asturias</option>
+                                <option value="CFN">Comunidad Foral de Navarra</option>
+                                <option value="Cnt">Cantabria</option>
+                                <option value="LRi">La Rioja</option>
+                                <option value="Mel">Melilla</option>
+                                <option value="Ceu">Ceuta</option>
+                            </select><br>
+                            <textarea name="asunto" id="asunto" cols="30" rows="3" placeholder="Escribe tu mensaje...">
+                            </textarea><br>
+                            <input type="submit" value="Enviar">
+                        </fieldset>
+                    </form>
+                </div>
+                <div id="interesPie">
+                    <p><a href="https://www.terraria.org/" target="_blank">Nuestra info</a></p>
+                    <p><a href="https://www.terraria.org/" target="_blank">Nuestro equipo</a></p>
+                    <p><a href="https://www.terraria.org/" target="_blank">Otros proyectos</a></p>
+                    <p><a href="https://www.terraria.org/" target="_blank">Personas a conocer</a></p>
+                    <p><a href="https://www.terraria.org/" target="_blank">Datos interesantes</a></p>
+                </div>
+                <div id="redesPie">
+                    <p><a href="https://twitter.com/Terraria_Logic" target="_blank"><img src="../terraplanismo/img/twitterIcon.png" alt="Icono de Twitter"></a></p>
+                    <p><a href="https://www.facebook.com/TerrariaOfficial/" target="_blank"><img src="../terraplanismo/img/facebookIcon.png" alt="Icono de Facebook"></a></p>
+                    <p><a href="https://www.reddit.com/r/Terraria/" target="_blank"><img src="../terraplanismo/img/redditIcon.png" alt="Icono de reddit"></a></p>
+                    <p><a href="https://www.youtube.com/@ReLogicOfficial/videos" target="_blank"><img src="../terraplanismo/img/YoutubeIcon.png" alt="Icono de Youtube"></a></p>
+                    <p><a href="https://www.instagram.com/terraria_logic/" target="_blank"><img src="../terraplanismo/img/instagramIcon.png" alt="Icono de Instagram"></a></p>
+                </div>
+            </div>
         </footer>
     </div>
 </body>
