--- a/practica 5/Terraplanismo/terraplanismo/index.html
+++ b/practica 5/Terraplanismo/terraplanismo/index.html
@@ -1,25 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-<<<<<<< HEAD
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="../terraplanismo/endika_css/cssPrincipal.css">
-  <link rel="stylesheet" href="../terraplanismo/endika_css/cssSecundario.css">
-  <title>Terraplanismo</title>
-=======
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../terraplanismo/css/cssPrincipal.css">
-    <link rel="stylesheet" href="../terraplanismo/css/cssSecundario.css">
-    <link rel="stylesheet" href="../terraplanismo/css/Cristo.css">
-    <title>Nombre de la pagina</title>
->>>>>>> Cristo
+    <link rel="stylesheet" href="cssfinal/cssPrincipal.css">
+    <title>1</title>
 </head>
-
 <body>
-<<<<<<< HEAD
   <div class="contenedor">
-    <header>LA TIERRA</header>
+    <div class="contenedor">
+      <header>
+        <section class="showclase">
+            <video src="video/fondos-de-estrellas-de-colores-gif-13 (1).mp4"></video>
+            <h1 class="titel">Inicio</h1>
+        </section>
+    </header>
     <div id="menu">
       <nav>
         <ul class="nav">
@@ -50,16 +44,7 @@
           <li><a href="../terraplanismo/foro.html">Foro</a></li>
         </ul>
       </nav>
-=======
-    <div class="contenedor">
-        <header>Cabecera</header>
-        <nav id="menu">
-            <ol>
-                <li> <a href="../terraplanismo/index.html" target="_blank">Inicio </a></li>
-                <li><a href="../terraplanismo/redonda.html" target="_blank">Redonda</a></li>
-                <li><a href="../terraplanismo/foro.html" target="_blank">Foro</a></li>
-            </ol>
-        </nav>
+    </div>
         <main>
             <div id="principal"></div>
             <div class="secundaria" id="secundaria1" ></div>
@@ -118,19 +103,6 @@
                 </div>
             </div>
         </footer>
->>>>>>> Cristo
-    </div>
-
-    <main>
-      <div id="principal"></div>
-      <div class="secundaria" id="secundaria1"></div>
-    </main>
-    <footer id="piePagina">
-
-    </footer>
   </div>
-  </div>
-
 </body>
-
 </html>
