--- a/practica 5/Terraplanismo/terraplanismo/terraplanismo.html
+++ b/practica 5/Terraplanismo/terraplanismo/terraplanismo.html
@@ -45,8 +45,12 @@
       </nav>
     </div>
     <main>
-      <div id="principal"></div>
-      <div class="secundaria" id="secundaria1"></div>
+      <div id="principal">
+
+      </div>
+      <div class="secundaria" id="secundaria1">
+        
+      </div>
     </main>
     <footer id="piePagina">
       <div >
