--- a/practica 5/Terraplanismo/terraplanismo/index.html
+++ b/practica 5/Terraplanismo/terraplanismo/index.html
@@ -1,108 +1,183 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="cssfinal/cssPrincipal.css">
-    <title>1</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="cssfinal/cssPrincipal.css">
+  <link rel="stylesheet" href="cssfinal/inicioPrueba.css">
+
+  <title>INICIO</title>
 </head>
+
 <body>
   <div class="contenedor">
     <div class="contenedor">
       <header>
         <section class="showclase">
-            <video src="video/fondos-de-estrellas-de-colores-gif-13 (1).mp4"></video>
-            <h1 class="titel">Inicio</h1>
+          <video src="video/fondos-de-estrellas-de-colores-gif-13 (1).mp4"></video>
+          <h1 class="titel">Inicio</h1>
         </section>
-    </header>
-    <div id="menu">
-      <nav>
-        <ul class="nav">
-          <li><a href="../terraplanismo/index.html">Inicio</a></li>
-          <li><a href="../terraplanismo/terraplanismo.html">Terraplanismo</a>
-            <ul>
-              <li><a href="">Submenu1</a></li>
-              <li><a href="">Submenu2</a></li>
-              <li><a href="">Submenu3</a></li>
-              <li><a href="">Submenu4</a>
-                <ul>
-                  <li><a href="">Submenu1</a></li>
-                  <li><a href="">Submenu2</a></li>
-                  <li><a href="">Submenu3</a></li>
-                  <li><a href="">Submenu4</a></li>
-                </ul>
-              </li>
-            </ul>
-          </li>
-          <li><a href="../terraplanismo/redonda.html">¿Por qué la Tierra no es plana?</a>
-            <ul>
-              <li><a href="">Submenu1</a></li>
-              <li><a href="">Submenu2</a></li>
-              <li><a href="">Submenu3</a></li>
-              <li><a href="">Submenu4</a></li>
-            </ul>
-          </li>
-          <li><a href="../terraplanismo/foro.html">Foro</a></li>
-        </ul>
-      </nav>
-    </div>
-        <main>
-            <div id="principal"></div>
-            <div class="secundaria" id="secundaria1" ></div>
-        </main>
-        <footer id="piePagina">
-            <div >
-                <div id="contactoPie">
-                    <form action="">
-                        <fieldset>
-                        <legend>Contacta con nosotros</legend>
-                            <label for="nombre">Nombre</label>
-                            <input type="text" id="nombre" name="Nombre" placeholder="Tu Nombre.."><br>
-                            <label for="apellido">Apellidos</label>
-                            <input type="text" id="apellido" name="Apellidos" placeholder="Tus Apellidos.."><br>
-                            <label for="comunidad">Comunidad</label>
-                            <select name="comunidad" id="comunidad">
-                                <option value="And">Andalucía</option>
-                                <option value="Cat">Cataluña</option>
-                                <option value="CoM">Comunidad de Madrid</option>
-                                <option value="CoV">Comunidad Valenciana</option>
-                                <option value="Gal">Galicia</option>
-                                <option value="CyL">Castilla y León</option>
-                                <option value="PVa">País Vasco</option>
-                                <option value="Can">Canarias</option>
-                                <option value="CLM">Castilla-La Mancha</option>
-                                <option value="RdM">Región de Murcia</option>
-                                <option value="Arg">Aragón</option>
-                                <option value="IBa">Islas Baleares</option>
-                                <option value="Ext">Extremadura</option>
-                                <option value="PdA">Principado de Asturias</option>
-                                <option value="CFN">Comunidad Foral de Navarra</option>
-                                <option value="Cnt">Cantabria</option>
-                                <option value="LRi">La Rioja</option>
-                                <option value="Mel">Melilla</option>
-                                <option value="Ceu">Ceuta</option>
-                            </select><br>
-                            <textarea name="asunto" id="asunto" cols="30" rows="3" placeholder="Escribe tu mensaje...">
-                            </textarea><br>
-                            <input type="submit" value="Enviar">
-                        </fieldset>
-                    </form>
-                </div>
-                <div id="interesPie">
-                    <p><a href="https://www.terraria.org/" target="_blank">Nuestra info</a></p>
-                    <p><a href="https://www.terraria.org/" target="_blank">Nuestro equipo</a></p>
-                    <p><a href="https://www.terraria.org/" target="_blank">Otros proyectos</a></p>
-                    <p><a href="https://www.terraria.org/" target="_blank">Personas a conocer</a></p>
-                    <p><a href="https://www.terraria.org/" target="_blank">Datos interesantes</a></p>
-                </div>
-                <div id="redesPie">
-                    <p><a href="https://twitter.com/Terraria_Logic" target="_blank"><img src="../terraplanismo/img/twitterIcon.png" alt="Icono de Twitter"></a></p>
-                    <p><a href="https://www.facebook.com/TerrariaOfficial/" target="_blank"><img src="../terraplanismo/img/facebookIcon.png" alt="Icono de Facebook"></a></p>
-                    <p><a href="https://www.reddit.com/r/Terraria/" target="_blank"><img src="../terraplanismo/img/redditIcon.png" alt="Icono de reddit"></a></p>
-                    <p><a href="https://www.youtube.com/@ReLogicOfficial/videos" target="_blank"><img src="../terraplanismo/img/YoutubeIcon.png" alt="Icono de Youtube"></a></p>
-                    <p><a href="https://www.instagram.com/terraria_logic/" target="_blank"><img src="../terraplanismo/img/instagramIcon.png" alt="Icono de Instagram"></a></p>
-                </div>
+      </header>
+      <div id="menu">
+        <nav>
+          <ul class="nav">
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="terraplanismo.html">Terraplanismo</a>
+              <ul>
+                <li><a href="">Submenu1</a></li>
+                <li><a href="">Submenu2</a></li>
+                <li><a href="">Submenu3</a></li>
+                <li><a href="">Submenu4</a>
+                  <ul>
+                    <li><a href="">Submenu1</a></li>
+                    <li><a href="">Submenu2</a></li>
+                    <li><a href="">Submenu3</a></li>
+                    <li><a href="">Submenu4</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </li>
+            <li><a href="redonda.html">¿Por qué la Tierra no es plana?</a>
+              <ul>
+                <li><a href="">Submenu1</a></li>
+                <li><a href="">Submenu2</a></li>
+                <li><a href="">Submenu3</a></li>
+                <li><a href="">Submenu4</a></li>
+              </ul>
+            </li>
+            <li><a href="foro.html">Foro</a></li>
+          </ul>
+        </nav>
+      </div>
+      <main>
+        <div id="principal">
+          <div class="texto">
+
+            <div class="contenido">
+              <h2>¿Cómo convencer a un terraplanista de que la Tierra es esférica?</h2>
+              <table>
+                <tr>
+                  <td><img src="img/img-info/icono_fecha.gif"></td>
+                  <th>17-10-2022 07:23</th>
+                </tr>
+              </table>
+
+              <p>
+                Todos sabemos que cuanto más alto subimos, más lejos podemos ver. Si la Tierra fuese plana, esto no
+                sería así. En una Tierra plana tendrías que ver hasta el final de la Tierra en cualquier sitio sin
+                relieve, como el mar, por ejemplo.
+                <br />
+                Las horas de salida y puesta de sol son distintas en cada lugar del mundo. Si lo piensas, esto tampoco
+                sería así en una Tierra plana.
+              </p>
+              <br />
+              <a href="terraplanismo.html">Seguir leyendo...</a>
             </div>
-        </footer>
-  </div>
+            <div class="contenido">
+              <h2>¿Por qué hay gente uqe aún cree que la Tierra es plana?</h2>
+              <table>
+                <tr>
+                  <td><img src="img/img-info/icono_fecha.gif"></td>
+                  <th>18-11-2022 07:23</th>
+                </tr>
+              </table>
+
+              <p>
+                Se le ha llamado "la reina de las teorías de conspiración". Sólo que ambas partes de este debate se
+                acusan de ser precisamente eso: una teoría de la conspiración.
+                <br />
+
+              </p>
+              <br />
+              <a href="terraplanismo.html">Seguir leyendo...</a>
+            </div>
+            <div class="contenido">
+              <h2>¿Por qué La Tierra es redonda y esférica?</h2>
+              <table>
+                <tr>
+                  <td><img src="img/img-info/icono_fecha.gif"></td>
+                  <th>19-12-2022 07:23</th>
+                </tr>
+              </table>
+
+              <p>
+                Decimos que la Tierra es redonda porque no puede ser otra cosa y es que, en el sistema solar.
+                cualquier cuerpo que tenga más de 100 km de diámetro tiene forma redondeada...
+                <br />
+                Se debe pensar en la
+                gravedad como una fuerza que proviene de todas las direcciones con la misma intensidad...
+                <br />
+                Se debe pensar en la gravedad como una fuerza que proviene de todas las direcciones con la misma
+                intensidad...
+              </p>
+              <br />
+              <a href="redonda.html">Seguir leyendo...</a>
+            </div>
+
+          </div>
+        </div>
+        <div class="secundaria" id="secundaria1"></div>
+      </main>
+      <footer id="piePagina">
+        <div>
+          <div id="contactoPie">
+            <form action="">
+              <fieldset>
+                <legend>Contacta con nosotros</legend>
+                <label for="nombre">Nombre</label>
+                <input type="text" id="nombre" name="Nombre" placeholder="Tu Nombre.."><br>
+                <label for="apellido">Apellidos</label>
+                <input type="text" id="apellido" name="Apellidos" placeholder="Tus Apellidos.."><br>
+                <label for="comunidad">Comunidad</label>
+                <select name="comunidad" id="comunidad">
+                  <option value="And">Andalucía</option>
+                  <option value="Cat">Cataluña</option>
+                  <option value="CoM">Comunidad de Madrid</option>
+                  <option value="CoV">Comunidad Valenciana</option>
+                  <option value="Gal">Galicia</option>
+                  <option value="CyL">Castilla y León</option>
+                  <option value="PVa">País Vasco</option>
+                  <option value="Can">Canarias</option>
+                  <option value="CLM">Castilla-La Mancha</option>
+                  <option value="RdM">Región de Murcia</option>
+                  <option value="Arg">Aragón</option>
+                  <option value="IBa">Islas Baleares</option>
+                  <option value="Ext">Extremadura</option>
+                  <option value="PdA">Principado de Asturias</option>
+                  <option value="CFN">Comunidad Foral de Navarra</option>
+                  <option value="Cnt">Cantabria</option>
+                  <option value="LRi">La Rioja</option>
+                  <option value="Mel">Melilla</option>
+                  <option value="Ceu">Ceuta</option>
+                </select><br>
+                <textarea name="asunto" id="asunto" cols="30" rows="3" placeholder="Escribe tu mensaje...">
+                            </textarea><br>
+                <input type="submit" value="Enviar">
+              </fieldset>
+            </form>
+          </div>
+          <div id="interesPie">
+            <p><a href="https://www.terraria.org/" target="_blank">Nuestra info</a></p>
+            <p><a href="https://www.terraria.org/" target="_blank">Nuestro equipo</a></p>
+            <p><a href="https://www.terraria.org/" target="_blank">Otros proyectos</a></p>
+            <p><a href="https://www.terraria.org/" target="_blank">Personas a conocer</a></p>
+            <p><a href="https://www.terraria.org/" target="_blank">Datos interesantes</a></p>
+          </div>
+          <div id="redesPie">
+            <p><a href="https://twitter.com/Terraria_Logic" target="_blank"><img
+                  src="../terraplanismo/img/twitterIcon.png" alt="Icono de Twitter"></a></p>
+            <p><a href="https://www.facebook.com/TerrariaOfficial/" target="_blank"><img
+                  src="../terraplanismo/img/facebookIcon.png" alt="Icono de Facebook"></a></p>
+            <p><a href="https://www.reddit.com/r/Terraria/" target="_blank"><img
+                  src="../terraplanismo/img/redditIcon.png" alt="Icono de reddit"></a></p>
+            <p><a href="https://www.youtube.com/@ReLogicOfficial/videos" target="_blank"><img
+                  src="../terraplanismo/img/YoutubeIcon.png" alt="Icono de Youtube"></a></p>
+            <p><a href="https://www.instagram.com/terraria_logic/" target="_blank"><img
+                  src="../terraplanismo/img/instagramIcon.png" alt="Icono de Instagram"></a></p>
+          </div>
+        </div>
+      </footer>
+    </div>
 </body>
+
 </html>
