--- a/practica 5/Terraplanismo/terraplanismo/redonda.html
+++ b/practica 5/Terraplanismo/terraplanismo/redonda.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
    <link rel="stylesheet" href="cssFinal/cssPrincipal.css">
-    <title>Terraplanismo</title>
+    <title>REDONDEZ</title>
 </head>
 
 <body>
