--- a/practica 5/Terraplanismo/terraplanismo/foro.html
+++ b/practica 5/Terraplanismo/terraplanismo/foro.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="cssfinal/cssPrincipal.css">
     <link rel="stylesheet" href="../terraplanismo/endika_css/cssSecundario.css">
-    <title>Terraplanismo</title>
+    <title>FORO</title>
 </head>
 
 <body>
