--- a/practica 5/Terraplanismo/terraplanismo/index.html
+++ b/practica 5/Terraplanismo/terraplanismo/index.html
@@ -20,39 +20,33 @@
       </header>
       <div id="menu">
         <nav>
-          <ul class="nav">
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="terraplanismo.html">Terraplanismo</a>
-              <ul>
-                <li><a href="">Submenu1</a></li>
-                <li><a href="">Submenu2</a></li>
-                <li><a href="">Submenu3</a></li>
-                <li><a href="">Submenu4</a>
+            <ul class="nav">
+                <li><a href="../terraplanismo/index.html">Inicio</a></li>
+                <li><a href="../terraplanismo/index.html">Terraplanismo</a>
                   <ul>
-                    <li><a href="">Submenu1</a></li>
-                    <li><a href="">Submenu2</a></li>
-                    <li><a href="">Submenu3</a></li>
-                    <li><a href="">Submenu4</a></li>
-                  </ul>
+                    <li><a href="terraplanismo.html#porque">¿Porque?</a></li>
+                    <li><a href="terraplanismo.html#quien">¿Quien?</a></li>
+                    <li><a href="terraplanismo.html#famosos">Famosos que nos apoyan</a>
+                  </li>
+                </ul>
                 </li>
-              </ul>
-            </li>
-            <li><a href="redonda.html">¿Por qué la Tierra no es plana?</a>
-              <ul>
-                <li><a href="">Submenu1</a></li>
-                <li><a href="">Submenu2</a></li>
-                <li><a href="">Submenu3</a></li>
-                <li><a href="">Submenu4</a></li>
-              </ul>
-            </li>
-            <li><a href="foro.html">Foro</a></li>
-          </ul>
+                <li><a href="../terraplanismo/redonda.html">¿Por qué la Tierra no es plana?</a>
+                    <ul>
+                        <li><a href="">Submenu1</a></li>
+                        <li><a href="">Submenu2</a></li>
+                        <li><a href="">Submenu3</a></li>
+                        <li><a href="">Submenu4</a></li>
+                    </ul>
+                </li>
+                <li><a href="../terraplanismo/foro.html">Foro</a></li>
+            </ul>
         </nav>
-      </div>
+    </div>
+      <div class="clear"></div>
       <main>
         <div id="principal">
           <div class="texto">
-
+            <!--contenido 1-->
             <div class="contenido">
               <h2>¿Cómo convencer a un terraplanista de que la Tierra es esférica?</h2>
               <table>
@@ -61,7 +55,6 @@
                   <th>17-10-2022 07:23</th>
                 </tr>
               </table>
-
               <p>
                 Todos sabemos que cuanto más alto subimos, más lejos podemos ver. Si la Tierra fuese plana, esto no
                 sería así. En una Tierra plana tendrías que ver hasta el final de la Tierra en cualquier sitio sin
@@ -70,9 +63,9 @@
                 Las horas de salida y puesta de sol son distintas en cada lugar del mundo. Si lo piensas, esto tampoco
                 sería así en una Tierra plana.
               </p>
-              <br />
-              <a href="terraplanismo.html">Seguir leyendo...</a>
+              <p><a href="terraplanismo.html">Seguir leyendo...</a></p>
             </div>
+            <!--Contenido 2-->
             <div class="contenido">
               <h2>¿Por qué hay gente uqe aún cree que la Tierra es plana?</h2>
               <table>
@@ -81,7 +74,6 @@
                   <th>18-11-2022 07:23</th>
                 </tr>
               </table>
-
               <p>
                 Se le ha llamado "la reina de las teorías de conspiración". Sólo que ambas partes de este debate se
                 acusan de ser precisamente eso: una teoría de la conspiración.
@@ -113,10 +105,10 @@
               <br />
               <a href="redonda.html">Seguir leyendo...</a>
             </div>
-
           </div>
         </div>
         <div class="secundaria" id="secundaria1"></div>
+      <div class="clear"></div>
       </main>
       <footer id="piePagina">
         <div>
